Updated my about links

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
   <!--center text-->
   <div class="center">
     <h1>About me</h1>
-    <p>I'm APainfulMemory or Mem for short. I'm a streamer, youtuber and programmer.</p>
+    <p>I'm APainfulMemory or Ory for short. I'm a streamer, youtuber and programmer.</p>
     <br>
     <ul">
       <li>Pronouns - It/Its</li>  
@@ -35,10 +35,10 @@
   </ul>
 <br>
   <h2>Links</h2>
-  <a href="https://www.youtube.com/@APainfulMemory">Youtube</a><br>
-  <a href="https://www.twitch.tv/apainfulmemory">Twitch</a><br>
+  <a href="https://www.youtube.com/@APainfulMemory/">Youtube</a><br>
+  <a href="https://www.youtube.com/@Its_Ory">Second Channel</a><br>
   <a href="https://github.com/APainfulMemory/">Github</a><br>
-  <a href="https://twitter.com/Painful_Mem">Twitter</a><br>
+  <a href="https://twitter.com/Its_Ory/">Twitter</a><br>
   <a href="https://www.instagram.com/Painful_mem/">Instagram</a>
 
   </div>
