--- a/about.html
+++ b/about.html
@@ -14,25 +14,26 @@
 <body style="background-Color:#0D1117;">
 
   <!--top navigational menu-->
-  <div class="topnav" id="myTopnav">
-    <a href="index.html">Home</a>
-    <a href="themes.html">Themes</a>
-    <a href="games.html">Games</a>
-    <a href="about.html" class="active">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fas fa-bars"></i>
-    </a>
-  </div>
+    <div class="topnav" id="myTopnav">
+        <a href="index.html">Home</a>
+        <a href="themes.html">Themes</a>
+        <a href="games.html">Games</a>
+        <a href="minecraft.html">Minecraft</a>
+        <a href="about.html" class="active">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fas fa-bars"></i>
+        </a>
+    </div>
 
   <!--center text-->
   <div class="center">
     <h1>About me</h1>
     <p>I'm APainfulMemory or Ory for short. I'm a streamer, youtuber and programmer.</p>
     <br>
-    <ul">
+    <ul>
       <li>Pronouns - It/Its</li>  
       <li>Character - William Whitlock</li>
-  </ul>
+    </ul>
 <br>
   <h2>Links</h2>
   <a href="https://www.youtube.com/@APainfulMemory/">Youtube</a><br>
