--- a/cherry_pink.html
+++ b/cherry_pink.html
@@ -12,15 +12,16 @@
 </head>
 
 <body style="background-Color:#0D1117;">
-  <div class="topnav" id="myTopnav">
-    <a href="index.html">Home</a>
-    <a href="themes.html" class="active">Themes</a>
-    <a href="games.html">Games</a>
-    <a href="about.html">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fas fa-bars"></i>
-    </a>
-  </div>
+    <div class="topnav" id="myTopnav">
+        <a href="index.html">Home</a>
+        <a href="themes.html">Themes</a>
+        <a href="games.html">Games</a>
+        <a href="minecraft.html">Minecraft</a>
+        <a href="about.html" class="active">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fas fa-bars"></i>
+        </a>
+    </div>
   <a style="position: absolute; left: 20%" class="btn" href="cherry_pink_chrome.html">Chrome</a>
   <a style="position: absolute; right: 20%" class="btn" href="cherry_pink_firefox.html">Firefox</a>
 </body>
