--- a/cherry_pink_firefox.html
+++ b/cherry_pink_firefox.html
@@ -12,15 +12,16 @@
 </head>
 
 <body style="background-Color:#0D1117;">
-  <div class="topnav" id="myTopnav">
-    <a href="index.html" class="active">Home</a>
-    <a href="themes.html">Themes</a>
-    <a href="games.html">Games</a>
-    <a href="about.html">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fas fa-bars"></i>
-    </a>
-  </div>
+    <div class="topnav" id="myTopnav">
+        <a href="index.html">Home</a>
+        <a href="themes.html">Themes</a>
+        <a href="games.html">Games</a>
+        <a href="minecraft.html">Minecraft</a>
+        <a href="about.html" class="active">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fas fa-bars"></i>
+        </a>
+    </div>
   <a style="margin-left: auto; margin-right: auto" class="btn" href="https://addons.mozilla.org/en-US/firefox/addon/cherry-pink/">Download</a>
   <img class=video src="images/cherry_pink_firefox.png" alt="Screenshot">
 </body>
