--- a/games.html
+++ b/games.html
@@ -12,15 +12,16 @@
 </head>
 
 <body style="background-Color:#0D1117;">
-  <div class="topnav" id="myTopnav">
-    <a href="index.html">Home</a>
-    <a href="themes.html">Themes</a>
-    <a href="games.html" class="active">Games</a>
-    <a href="about.html">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fas fa-bars"></i>
-    </a>
-  </div>
+    <div class="topnav" id="myTopnav">
+        <a href="index.html">Home</a>
+        <a href="themes.html">Themes</a>
+        <a href="games.html">Games</a>
+        <a href="minecraft.html">Minecraft</a>
+        <a href="about.html" class="active">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fas fa-bars"></i>
+        </a>
+    </div>
 </body>
 
 </html>
