--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/FoxSit.png">
-  <script src="detectmobilebrowser.js"></script>
   <script src="https://kit.fontawesome.com/55ee7f3026.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="script.js"></script>
   <meta charset="utf-8">
@@ -12,15 +11,17 @@
 </head>
 
 <body style="background-Color:#0D1117;">
-  <div class="topnav" id="myTopnav">
-    <a href="index.html" class="active">Home</a>
-    <a href="themes.html">Themes</a>
-    <a href="games.html">Games</a>
-    <a href="about.html">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fas fa-bars"></i>
-    </a>
-  </div>
+    <div class="topnav" id="myTopnav">
+        <a href="index.html">Home</a>
+        <a href="themes.html">Themes</a>
+        <a href="games.html">Games</a>
+        <a href="minecraft.html">Minecraft</a>
+        <a href="about.html" class="active">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fas fa-bars"></i>
+        </a>
+    </div>
+
   <h1 style="color: white; text-align: center">Welcome</h1>
   <iframe class="video" src="https://www.youtube-nocookie.com/embed/sEjWKsZ5NsM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
