--- a/minecraft.html
+++ b/minecraft.html
@@ -11,19 +11,20 @@
 </head>
 
 <body style="background-Color:#0D1117;">
-    <div class="topnav" id="myTopnav">
-        <a href="index.html">Home</a>
-        <a href="themes.html">Themes</a>
-        <a href="games.html">Games</a>
-        <a href="minecraft.html" class="active">Minecraft</a>
-        <a href="about.html">About</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fas fa-bars"></i>
-        </a>
-    </div>
-
-    <h1 style="color: white; text-align: center">Resource Packs</h1>
-    <a href="https://modrinth.com/resourcepack/autism-piece">Autism Piece of Undying <img display:inline-block style="max-width: 2em; max-height: auto;transform: translate(0, 0.7em)" src="images/autism_piece.png"></a>
+  <!--Top navigational bar-->
+  <div class="topnav" id="myTopnav">
+    <a href="index.html">Home</a>
+    <a href="themes.html">Themes</a>
+    <a href="games.html">Games</a>
+    <a href="minecraft.html" class="active">Minecraft</a>
+    <a href="about.html">About</a>
+    <!--Hamburger menu icon for portait screens-->
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fas fa-bars"></i>
+    </a>
+  </div>
+  <h1 style="color: white; text-align: center">Resource Packs</h1>
+  <a href="https://modrinth.com/resourcepack/autism-piece">Autism Piece of Undying <img display:inline-block style="max-width: 2em; max-height: auto;transform: translate(0, 0.7em)" src="images/autism_piece.png"></a>
 </body>
 
 </html>
