--- a/themes.html
+++ b/themes.html
@@ -4,7 +4,6 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/FoxSit.png">
-  <script src="detectmobilebrowser.js"></script>
   <script src="https://kit.fontawesome.com/55ee7f3026.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="script.js"></script>
   <meta charset="utf-8">
@@ -12,16 +11,19 @@
 </head>
 
 <body style="background-Color:#0D1117;">
-  <div class="topnav" id="myTopnav">
+  <!--Top navigational bar-->
+  <div class="topnav" id="TopnavJS">
     <a href="index.html">Home</a>
     <a href="themes.html" class="active">Themes</a>
     <a href="games.html">Games</a>
+    <a href="minecraft.html">Minecraft</a>
     <a href="about.html">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <!--Hamburger menu icon for portait screens-->
+    <a href="javascript:void(0);" class="icon" onclick="Hamburg()">
       <i class="fas fa-bars"></i>
     </a>
   </div>
-  <a style="margin-left: auto; margin-right: auto" class="btn" href="cherry_pink.html">Cherry Pink</a>
+  <a style="margin-left: auto; margin-right: auto" class="btn" href="cherry_pink_firefox.html">Cherry Pink</a>
 </body>
 
 </html>
