--- a/cherry_pink.html
+++ b/cherry_pink.html
@@ -8,41 +8,22 @@
   <script src="https://kit.fontawesome.com/55ee7f3026.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="script.js"></script>
   <meta charset="utf-8">
-  <title>About</title>
+  <title>Themes</title>
 </head>
 
 <body style="background-Color:#0D1117;">
-
-  <!--top navigational menu-->
     <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
         <a href="themes.html">Themes</a>
         <a href="games.html">Games</a>
         <a href="minecraft.html">Minecraft</a>
         <a href="about.html" class="active">About</a>
-        <a href="javascript:void(0);" class="icon" onclick="ResponsiveTopNav()">
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fas fa-bars"></i>
         </a>
     </div>
-
-  <!--center text-->
-  <div class="center">
-    <h1>About me</h1>
-    <p>I'm William. I'm a streamer, youtuber and programmer.</p>
-    <br>
-    <ul>  
-      <li>Name - William Whitlock</li>
-    </ul>
-<br>
-  <h2>Links</h2>
-  <a href="https://www.youtube.com/@APainfulMemory/">Youtube</a><br>
-  <a href="https://www.youtube.com/@Its_Ory">Second Channel</a><br>
-  <a href="https://github.com/APainfulMemory/">Github</a><br>
-  <a href="https://twitter.com/Its_Ory/">Twitter</a><br>
-  <a href="https://www.instagram.com/Painful_mem/">Instagram</a>
-
-  </div>
-
+  <a style="position: absolute; left: 20%" class="btn" href="cherry_pink_chrome.html">Chrome</a>
+  <a style="position: absolute; right: 20%" class="btn" href="cherry_pink_firefox.html">Firefox</a>
 </body>
 
 </html>
