--- a/cherry_pink_chrome.html
+++ b/cherry_pink_chrome.html
@@ -8,20 +8,21 @@
   <script src="https://kit.fontawesome.com/55ee7f3026.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="script.js"></script>
   <meta charset="utf-8">
-  <title>Themes</title>
+  <title>Cherry Pink</title>
 </head>
 
 <body style="background-Color:#0D1117;">
   <div class="topnav" id="myTopnav">
-    <a href="index.html">Home</a>
-    <a href="themes.html" class="active">Themes</a>
+    <a href="index.html" class="active">Home</a>
+    <a href="themes.html">Themes</a>
     <a href="games.html">Games</a>
     <a href="about.html">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fas fa-bars"></i>
     </a>
   </div>
-  <a style="margin-left: auto; margin-right: auto" class="btn" href="cherry_pink.html">Cherry Pink</a>
+  <a style="margin-left: auto; margin-right: auto" class="btn" href="https://github.com/BabbyBlue/Cherry-Pink-Chrome">Download</a>
+  <img class=video src="images/cherry_pink_chrome.png" alt="Screenshot">
 </body>
 
 </html>
